--- a/templates/about.html
+++ b/templates/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <link rel="stylesheet" href="static/night-mode.css">
+    <script src="static/night-mode.js" defer></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -30,5 +32,6 @@
             </a>
         </p>
     </div>
+    <script src="static/music-player.js"></script>
 </body>
 </html>
