--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counselling</title>
     <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="static/night-mode.css">
+    <script src="static/night-mode.js" defer></script>
 </head>
 <body>
     <div class="navbar">
@@ -83,5 +85,6 @@
             }
         }
     </script>
+    <script src="static/music-player.js"></script>
 </body>
 </html>
