--- a/templates/breathing_exercise.html
+++ b/templates/breathing_exercise.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="static/night-mode.css">
+    <script src="static/night-mode.js" defer></script>
     <title>Breathing Exercise</title>
     <style>
         body {
@@ -103,11 +105,11 @@
                 <option value="15">15 sec</option>
                 <option value="30">30 sec</option>
                 <option value="45">45 sec</option>
-                
-                <option value="180">3 min</option>
-                <option value="300">5 min</option>
-                <option value="600">10 min</option>
-                <option value="900">15 min</option>
+                <option value="60">1 min</option>
+                <option value="180">3 mins</option>
+                <option value="300">5 mins</option>
+                <option value="600">10 mins</option>
+                <option value="900">15 mins</option>
             </select>
             <button onclick="startBreathing()">Start</button>
             <button id="pauseBtn" onclick="pauseBreathing()">Pause</button>
