--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Therapist Registration</title>
     <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="static/night-mode.css">
+    <script src="static/night-mode.js" defer></script>
 </head>
 <body>
     <div class="navbar">
