--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="static/styles.css">
     <link rel="stylesheet" href="static/night-mode.css">
     <script src="static/night-mode.js" defer></script>
+    <script>
+        // Apply night mode preference immediately
+        (function() {
+            const isDarkMode = localStorage.getItem('nightMode') === 'true';
+            if (isDarkMode) {
+                document.documentElement.classList.add('preload-night-mode');
+            }
+        })();
+    </script>
 </head>
 <body>
     <div class="navbar">
@@ -21,8 +30,8 @@
     <p class="counselling-description">
         This section provides contact details of professional therapists who specialize in different mental health areas. 
         If you need guidance, feel free to reach out to a therapist that suits your needs.<br><br><br>
-        <button onclick="window.location.href='/register'">Register as a Therapist</button>
-        <button onclick="unregisterTherapist()">Unregister</button>
+        <button class="regunreg-button" onclick="window.location.href='/register'">Register as a Therapist</button>
+        <button class="regunreg-button" onclick="unregisterTherapist()">Unregister</button>
     </p>
 
     <div class="therapist-list" id="therapist-list">
