--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" type="text/css" href="static/styles.css">
     <link rel="stylesheet" href="static/night-mode.css">
     <script src="static/night-mode.js" defer></script>
+    <script>
+        // Apply night mode preference immediately
+        (function() {
+            const isDarkMode = localStorage.getItem('nightMode') === 'true';
+            if (isDarkMode) {
+                document.documentElement.classList.add('preload-night-mode');
+            }
+        })();
+    </script>
 </head>
 <body>
     <!-- Navigation Bar -->
