--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -30,8 +30,8 @@
     <p class="counselling-description">
         This section provides contact details of professional therapists who specialize in different mental health areas. 
         If you need guidance, feel free to reach out to a therapist that suits your needs.<br><br><br>
-        <button class="regunreg-button" onclick="window.location.href='/register'">Register as a Therapist</button>
-        <button class="regunreg-button" onclick="unregisterTherapist()">Unregister</button>
+        <button onclick="window.location.href='/register'">Register as a Therapist</button>
+        <button onclick="unregisterTherapist()">Unregister</button>
     </p>
 
     <div class="therapist-list" id="therapist-list">
