added clerk functionality along with admin only buttons

--- a/templates/breathing_exercise.html
+++ b/templates/breathing_exercise.html
@@ -99,7 +99,7 @@
     <div class="navbar">
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('counselling') }}">Counselling</a>
-        <a href="{{ url_for('breathe') }}">Breathe</a>
+        <a href="#">Breathe</a>
         <a href="{{ url_for('about') }}">About Us</a>
     </div>
     <div class="container">
