--- a/templates/about.html
+++ b/templates/about.html
@@ -16,6 +16,14 @@
             }
         })();
     </script>
+    <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key="pk_test_ZGVhci13b3JtLTk1LmNsZXJrLmFjY291bnRzLmRldiQ"
+        src="https://dear-worm-95.clerk.accounts.dev/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
+        type="text/javascript">
+    </script>
+    <script src="static/script.js"></script>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -23,7 +31,8 @@
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('counselling') }}">Counselling</a>
         <a href="{{ url_for('breathe') }}">Breathe</a>
-        <a href="{{ url_for('about') }}" class="active">About Us</a>
+        <a href="#" class="active">About Us</a>
+        <div id="auth-button"></div>
     </div>
 
     <div class="about-container">
