--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -16,13 +16,22 @@
             }
         })();
     </script>
+    <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key="pk_test_ZGVhci13b3JtLTk1LmNsZXJrLmFjY291bnRzLmRldiQ"
+        src="https://dear-worm-95.clerk.accounts.dev/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
+        type="text/javascript">
+    </script>
+    <script src="static/script.js"></script>
 </head>
 <body>
     <div class="navbar">
         <a href="{{ url_for('home') }}">Home</a>
-        <a href="{{ url_for('counselling') }}">Counselling</a>
+        <a href="#">Counselling</a>
         <a href="{{ url_for('breathe') }}">Breathe</a>
         <a href="{{ url_for('about') }}">About Us</a>
+        <div id="auth-button"></div>
     </div>
 
     <h1>Counselling Services</h1>
@@ -30,8 +39,7 @@
     <p class="counselling-description">
         This section provides contact details of professional therapists who specialize in different mental health areas. 
         If you need guidance, feel free to reach out to a therapist that suits your needs.<br><br><br>
-        <button onclick="window.location.href='/register'">Register as a Therapist</button>
-        <button onclick="unregisterTherapist()">Unregister</button>
+        <div id="admin-buttons"></div>
     </p>
 
     <div class="therapist-list" id="therapist-list">
