--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="static/styles.css">
+    <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key="pk_test_ZGVhci13b3JtLTk1LmNsZXJrLmFjY291bnRzLmRldiQ"
+        src="https://dear-worm-95.clerk.accounts.dev/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
+        type="text/javascript">
+    </script>
 
     <!-- Night Mode Support -->
     <link rel="stylesheet" href="static/night-mode.css">
@@ -23,9 +30,11 @@
     <!-- Navigation Bar -->
     <div class="navbar">
         <!--<a href="#">Home</a>-->
+        <a href="#">Home</a>
         <a href="{{ url_for('counselling') }}">Counselling</a>
         <a href="{{ url_for('breathe') }}">Breathe</a>
         <a href="{{ url_for('about') }}">About Us</a>
+        <div id="auth-button"></div>
     </div>
 
     <h1>FURINA</h1>
