--- a/templates/breathing_exercise.html
+++ b/templates/breathing_exercise.html
@@ -14,6 +14,14 @@
             }
         })();
     </script>
+    <script
+        async
+        crossorigin="anonymous"
+        data-clerk-publishable-key="pk_live_Y2xlcmsuZnVyaW5hY29tcGFuaW9uLnNpdGUk"
+        src="https://clerk.furinacompanion.site/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
+        type="text/javascript">
+    </script>
+    <script src="static/script.js"></script>
     <title>Breathing Exercise</title>
     <style>
         body {
