--- a/templates/about.html
+++ b/templates/about.html
@@ -19,8 +19,8 @@
     <script
         async
         crossorigin="anonymous"
-        data-clerk-publishable-key="pk_live_Y2xlcmsuZnVyaW5hY29tcGFuaW9uLnNpdGUk"
-        src="https://clerk.furinacompanion.site/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
+        data-clerk-publishable-key="pk_test_ZGV2b3RlZC1sb2N1c3QtMjIuY2xlcmsuYWNjb3VudHMuZGV2JA"
+        src="https://devoted-locust-22.clerk.accounts.dev/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
         type="text/javascript">
     </script>
     <script src="static/script.js"></script>
