clerk worked, styling registration buttons

--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -36,11 +36,11 @@
 
     <h1>Counselling Services</h1>
 
-    <p class="counselling-description">
+    <div class="counselling-description">
         This section provides contact details of professional therapists who specialize in different mental health areas. 
         If you need guidance, feel free to reach out to a therapist that suits your needs.<br><br><br>
-        <div id="admin-buttons"></div>
-    </p>
+        <div id="admin-buttons" class="reg-button"></div>
+    </div>
 
     <div class="therapist-list" id="therapist-list">
         <!-- Therapists will be loaded here dynamically -->
