--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
         <a href="{{ url_for('counselling') }}">Counselling</a>
         <a href="{{ url_for('breathe') }}">Breathe</a>
         <a href="{{ url_for('about') }}">About Us</a>
-        <div id="auth-button"></div>
+        <div id="auth-button" class="reg-button"></div>
     </div>
 
     <h1>FURINA</h1>
@@ -70,7 +70,6 @@
 
     <!-- Status Display -->
     <div class="status" id="status"></div>
-    <script src="static/script.js"></script>
 
     <!--Emergency resources panel-->
     <div id="emergency-resources" class="safety-alert-container" style="display: none;">
