--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -39,7 +39,7 @@
     <div class="counselling-description">
         This section provides contact details of professional therapists who specialize in different mental health areas. 
         If you need guidance, feel free to reach out to a therapist that suits your needs.<br><br><br>
-        <div id="admin-buttons" class="reg-button"></div>
+        <div id="admin-buttons"></div>
     </div>
 
     <div class="therapist-list" id="therapist-list">
