--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         src="https://clerk.furinacompanion.site/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
         type="text/javascript">
     </script>
+    <script src="static/script.js"></script>
     
     <!-- Night Mode Support -->
     <link rel="stylesheet" href="static/night-mode.css">
