--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,6 @@
         src="https://clerk.furinacompanion.site/npm/@clerk/clerk-js@5/dist/clerk.browser.js"
         type="text/javascript">
     </script>
-    <script src="static/script.js"></script>
     
     <!-- Night Mode Support -->
     <link rel="stylesheet" href="static/night-mode.css">
@@ -102,6 +101,6 @@
     </div>
 
     <script src="static/music-player.js"></script>
-
+    <script src="static/script.js" defer></script>
 </body>
 </html>
