--- a/static/styles.css
+++ b/static/styles.css
@@ -173,6 +173,25 @@ h1 {
 }
 
 /* Button Styling */
+button {
+    padding: 10px 15px;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow */
+    backdrop-filter: blur(10px);
+    transition: all 0.3s ease-in-out;
+    border: 1px solid #ddd;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    margin-left: 10px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+button:hover {
+    background-color: #e49c4b;
+}
+
 .input-area button {
     width: 45px;
     height: 45px;
@@ -460,7 +479,7 @@ input:focus {
     border-left: 5px solid #ff4d4d;
     padding: 20px;
     height: 310px;
-    margin: 10px 0;
+    margin: 60px 0;
     max-width: 685px;
     margin-left: auto;
     margin-right: auto;
@@ -482,6 +501,7 @@ input:focus {
 .user-safety-concern {
     border: 2px solid #ff4d4d !important;
     background-color: #fff0f0 !important;
+    color: #1e1e1e !important;
 }
 
 /* Music Navigation Button */
