--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,7 @@
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('counselling') }}">Counselling</a>
         <a href="{{ url_for('breathe') }}">Breathe</a>
-        <a href="{{ url_for('about') }}" class="active">About Us</a>
+        <a href="#" class="active">About Us</a>
     </div>
 
     <div class="about-container">
