--- a/templates/index.html
+++ b/templates/index.html
@@ -80,11 +80,11 @@
             <ul>
                 <li>National Suicide Prevention Lifeline: <a href="tel:112">112</a> (IN)</li>
                 <li>Crisis Text Line: Text on 14416 (IN)</li>
-                <li>Local Emergency: <a href="tel:112">112</a> (IN)</li>
+                <li>Local Emergency: <a href="tel:9980127149">112</a> (IN)</li>
             </ul>
 
             <div class="emergency-contacts">
-                <button class="emergency-button" onclick="window.open('tel:112')">
+                <button class="emergency-button" onclick="window.open('tel:9980127149')">
                     Call 112 Suicide Hotline (IN)
                 </button>
                 
@@ -102,5 +102,7 @@
 
     <script src="static/music-player.js"></script>
     <script src="static/script.js" defer></script>
+    <script src="static/user-onboarding.js"></script>
+    <div id="emergency-overlay"></div>
 </body>
 </html>
