added assessment quiz, button style updates, link for therapist phone no.

--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -70,7 +70,7 @@
                             <p><strong>Specialization:</strong> ${therapist.specialization}</p>
                             <p><strong>Languages:</strong> ${therapist.languages}</p>
                             <p><strong>Experience:</strong> ${therapist.experience} years</p>
-                            <p><strong>Phone:</strong> ${therapist.phone}</p>
+                            <p onclick="window.open('tel:${therapist.phone}')"><strong>Phone:</strong> ${therapist.phone}</p>
                             <p><strong>Contact:</strong> ${therapist.email}</p>
                         </div>
                     `;
