--- a/static/styles.css
+++ b/static/styles.css
@@ -351,32 +351,34 @@ button:hover {
 }
 
 .about-container {
-    max-width: 800px;
-    margin: 80px auto 40px;
-    padding: 30px;
-    background: rgba(0, 0, 0, 0.3); /* Darkened the container */
+    max-width: 950px;
+    margin: 150px auto 40px;
+    padding: 60px;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     color: #fff;
     position: relative;
+    background: rgba(1, 1, 1, 0.3);
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px); /* For Safari support */
+    transition: all 0.3s ease-in-out;
 }
 
 .about-container h1 {
     color: rgb(243, 212, 252);
     font-size: 32px;
-    position: absolute;
-    top: 50px;
-    left: 25px;
-    margin: 0;
+    position: relative;
+    left: 315px;
+    text-align: center;
 }
 
 .about-container p {
     font-size: 18px;
     color: #ddd;
     line-height: 1.4;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-bottom: 15px;
 }
 
@@ -387,12 +389,6 @@ button:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-/* Add text shadow only to specific paragraphs */
-.about-container p:first-of-type, 
-.about-container p:nth-of-type(2) {
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .about-container a {
@@ -415,17 +411,6 @@ button:hover {
     vertical-align: middle;
     margin-left: 5px;
 }
-
-/* Registration Form Container 
-.container {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 400px;
-    margin: 50px auto;
-}*/
 
 /* Form Styling */
 form {
