--- a/templates/breathing_exercise.html
+++ b/templates/breathing_exercise.html
@@ -131,6 +131,7 @@
         <a href="{{ url_for('counselling') }}">Counselling</a>
         <a href="#">Breathe</a>
         <a href="{{ url_for('about') }}">About Us</a>
+        <div id="auth-button"></div>
     </div>
     <div class="container">
         <h1>Breathing Exercise</h1>
