--- a/static/styles.css
+++ b/static/styles.css
@@ -360,6 +360,7 @@ button:hover {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
     color: #fff;
     position: relative;
+    text-align: center;
     background: rgba(1, 1, 1, 0.3);
     backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px); /* For Safari support */
@@ -369,6 +370,8 @@ button:hover {
 .about-container h1 {
     color: rgb(243, 212, 252);
     font-size: 32px;
+    top: 0px;
+    margin: 0;
     position: relative;
     text-align: center;
 }
