--- a/templates/about.html
+++ b/templates/about.html
@@ -497,5 +497,6 @@
 
     <script src="static/quiz.js"></script>
     <script src="static/music-player.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
