--- a/templates/counselling.html
+++ b/templates/counselling.html
@@ -72,6 +72,7 @@
                             <p><strong>Experience:</strong> ${therapist.experience} years</p>
                             <p onclick="window.open('tel:${therapist.phone}')"><strong>Phone:</strong> ${therapist.phone}</p>
                             <p><strong>Contact:</strong> ${therapist.email}</p>
+                            <p><strong>Availability:</strong> ${therapist.availability}</p>
                         </div>
                     `;
                 });
