--- a/static/styles.css
+++ b/static/styles.css
@@ -67,18 +67,18 @@ h1 {
 .chat-container {
     border: 1px solid #ddd;
     border-radius: 8px;
-    height: 320px;
-    max-width: 685px;
+    height: 400px;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
-    margin-top: 180px;
+    margin-top: 115px;
     margin-left: auto;
     margin-right: auto;
 
     /* Translucent Glass Effect */
     background: rgba(255, 255, 255, 0.1); /* Light white background with transparency */
     backdrop-filter: blur(10px); /* Blur effect for glass effect */
-    -webkit-backdrop-filter: blur(10px); /* For Safari support */
+    -webkit-backdrop-filter: blur(10px); /* For webkit support */
     
     /* Glossy Reflection */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Soft shadow */
@@ -92,13 +92,19 @@ h1 {
 .chat-messages {
     flex: 1;
     overflow-y: auto;
-    padding: 15px;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    padding: 15px 25px;
+}
+
+.chat-messages::-webkit-scrollbar {
+    display: none;
 }
 
 /* Message Styling */
 .message {
     margin-bottom: 15px;
-    padding: 10px;
+    padding: 12px;
     border-radius: 8px;
     max-width: 80%;
     position: relative;
